fixed overflow and player icons

--- a/src/components/Playlist/Playlist.css
+++ b/src/components/Playlist/Playlist.css
@@ -1,4 +1,13 @@
 .playlist-card {
+  display: inline-block;
+}
+
+.playlist-card:hover {
+  cursor: pointer;
+  /* Add animation */
+}
+
+.cover {
   width: 150px;
   height: 150px;
   object-fit: cover;
@@ -6,26 +15,42 @@
   flex-shrink: 0;
   border-radius: 8px;
   background-color: rgba(0, 0, 0, 0.08);
-  display: inline-block;
   position: relative;
   margin-left: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   z-index: 1;
 }
 
-.playlist-card img {
+.cover img {
   width: 100%;
 }
 
-/* .playlist-card img::after {
-    background-color: aqua;
-} */
-
-.play-album {
+.cover::before {
+  content: "";
   position: absolute;
-  bottom: .5rem;
-  left: .5rem;
-  font-size: 2.3rem;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(255, 255, 255, 0) 50%
+  );
+}
+
+.play-album-icon {
+  position: absolute;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  /* font-size: 2.3rem; */
   color: white;
   z-index: 12;
+}
+
+.title {
+  font-size: 1rem;
+  color: white;
+  margin-left: 10px;
+  margin-bottom: 10px;
 }
