--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -6,4 +6,7 @@
 /* Home page (right column) */
 .home-page {
   background: linear-gradient(0deg, rgb(19, 19, 19) 60%, rgba(217,147,242,0.9416141456582633) 110%);
+  overflow-y: scroll;
+  height: calc(100vh - 4.5rem);
 }
+
